# reindeer

./: CMakeLists.txt  Makefile  OpenGLGlx.cbp  OpenGLGlx.cpp  Reindeer.linux.cbp  Reindeer.linux.workspace  Reindeer.vs2010.sln  Reindeer.vs2013.sln  Reindeer.win-mingw32.workspace  Reindeer.workspace  ReindeerEditor.cbp  class_diagram.mdj  class_diagram.uml  design.md  readme.md  readme.txt
BulletTest/: BaseObject.cpp  BaseObject.h  BaseRenderer.cpp  BaseRenderer.h  BoxObject.cpp  BoxObject.h  BoxRenderer.cpp  BoxRenderer.h  BulletTest.cbp  BulletTest.d3d9.vcxproj  BulletTest.d3d9.vs2010.vcxproj  BulletTest.d3d9.vs2013.vcxproj  BulletTest.linux.cbp  BulletTest.opengl.vcxproj  BulletTest.opengl.vs2010.vcxproj  BulletTest.opengl.vs2013.vcxproj  BulletTest.vcxproj  BulletTest.win-mingw32.cbp  Camera.cpp  Camera.h  D3d9BoxRenderer.cpp  D3d9BoxRenderer.h  D3d9ModelRenderer.cpp  D3d9ModelRenderer.h  D3d9Renderer.cpp  D3d9Renderer.h  D3d9World.cpp  D3d9World.h  DepthRTT.fragmentshader  Direct3DWorld.cpp  Direct3DWorld.h  Drawable.cpp  Drawable.h  GLDebugDrawer.cpp  LegacyOpenGLBoxRenderer.cpp  LegacyOpenGLBoxRenderer.h  LegacyOpenGLModelRenderer.cpp  LegacyOpenGLModelRenderer.h  LegacyOpenGLRenderer.cpp  LegacyOpenGLRenderer.h  (+30 more)
Reindeer/: BaseObject.cpp  BaseObject.h  BaseRenderer.h  BoxObject.cpp  BoxObject.h  BulletTest.linux.cbp  Camera.cpp  Camera.h  Container.h  D3d9Renderer.cpp  D3d9Renderer.h  D3d9World.cpp  D3d9World.h  Drawable.h  GLDebugDrawer.h  GlfwContainer.cpp  GlfwContainer.h  LegacyOpenGLLight.cpp  LegacyOpenGLLight.h  LegacyOpenGLRenderer.cpp  LegacyOpenGLRenderer.h  Light.cpp  Light.h  Main.cpp  MainConsole.cpp  Makefile  OpenGLLight.cpp  OpenGLLight.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLWorld.cpp  OpenGLWorld.h  PhysicalObject.cpp  PhysicalObject.h  RdrCamera.cpp  RdrCamera.h  RdrCollisionShapeFactory.cpp  RdrDrawable.cpp  RdrDrawable.h  RdrHelper.cpp  (+33 more)
Reindeer-OpenGL/: BaseObject.cpp  BaseObject.h  BoxObject.cpp  BoxObject.h  Camera.cpp  Camera.h  Reindeer-OpenGL.linux.cbp  Reindeer-OpenGL.project  Reindeer-OpenGL.win-mingw32.cbp  main.cpp
Reindeer-OpenGL3/: BaseObject.h  BoxObject.cpp  BoxObject.h  ColorFragmentShader.fragmentshader  Reindeer-OpenGL3.cbp  Reindeer-OpenGL3.win-mingw32.cbp  StandardShading.fragmentshader  StandardShading.vertexshader  TransformVertexShader.vertexshader  main.cpp
Reindeer.openGL/: .cproject  .project  BaseObject.cpp  BaseObject.h  BoxObject.cpp  BoxObject.h  Camera.cpp  Camera.h  main.cpp
examples/: fallingboxes-android.cpp  fallingboxes.cpp
glew/: glew.cbp
lib/: notes.txt
lib/linux/: notes.txt
lib/vs2010/: notes.txt
lib/vs2013/: notes.txt
lib/win-mingw32/: notes.txt
shader/: DepthRTT.vert  Passthrough.vert  SimpleTexture.frag  StandardShading.frag
src/common/: RdrLinuxThread.cpp  RdrLinuxThread.h  RdrThread.h  Runnable.cpp
src/container/: AndroidEglContainer.cpp  AndroidEglContainer.h  Container.cpp  Container.h  EglContainer.cpp  EglContainer.h  GlfwContainer.cpp  GlfwContainer.h  GlxContainer.cpp  GlxContainer.h  RdrGtkContainer.cpp  RdrGtkContainer.h
src/core/: BoxObject.h  Container.cpp  D3d9Light.cpp  D3d9Light.h  D3d9Renderer.cpp  D3d9World.cpp  RdrCamera.cpp  RdrCollisionShapeFactory.h  RdrHelper.cpp  RdrLight.h  RdrLight_LegacyOpenGL.cpp  RdrLight_OpenGL.cpp  RdrLight_OpenGL.h  RdrMesh.h  RdrMeshFactory.h  RdrMeshFactory_OpenGL.cpp  RdrMeshFactory_OpenGL.h  RdrMeshModel.h  RdrMesh_LegacyOpenGL.cpp  RdrMesh_OpenGL.cpp  RdrNode.h  RdrRigidBody.h  RdrShaderManager.cpp  RdrShaderManager.h  RdrTransform.cpp  RdrWorld.cpp  RdrWorld.h  RdrWorld_OpenGL.cpp  RdrWorld_OpenGL.h  Reindeer.d3d9.vs2010.vcxproj  Reindeer.opengl.vs2010.vcxproj  WglContainer.cpp  Win32Container.cpp  Win32Container.h  config.cpp  main.cpp  reindeer.h  shader.cpp  shader.h  texture.cpp
src/editor/: main.cpp  main_form.glade
wks/android-studio/: build.gradle
wks/android-studio/app/: build.gradle
wks/android-studio/app/src/androidTest/java/com/mrap/reindeer_example/: ExampleInstrumentedTest.java
wks/android-studio/app/src/main/: AndroidManifest.xml
wks/android-studio/app/src/test/java/com/mrap/reindeer_example/: ExampleUnitTest.java
wks/android-studio/gradle/wrapper/: gradle-wrapper.properties
wks/geany/: projects
